# opsbuddy

./: .gitignore  LICENSE  README.md  pyproject.toml
opsbuddy/: config.py  i18n.py  main.py
opsbuddy/commands/: diagnose.py  disk.py  docker.py  explain.py  language.py  learn.py  network.py  overview.py  processes.py
opsbuddy/locale/: en.py  pt.py
