[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opsbuddy"
version = "0.1.0"
description = "Assistente interativo para administração de servidores Linux"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "psutil>=5.9",
]

[project.scripts]
opsbuddy = "opsbuddy.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["opsbuddy*"]
